--- a/Templates/Designs/TTonlineNew/Custom/Products_loop_box.cshtml
+++ b/Templates/Designs/TTonlineNew/Custom/Products_loop_box.cshtml
@@ -222,10 +222,29 @@ if(Dealer != "" || Producator != ""){
              <div class="product-image">
                   <a href="@productLink" class="overlay-link">
                       <figure class=""> 
-                          @if(!string.IsNullOrEmpty(imagineProdus)) {  
+                          @if(!string.IsNullOrEmpty(imagineProdusRaw)) {  
                               <img src="@imagineProdus" alt='@productName' class="img-responsive"/>             
                           } else {
-                              <img src="@GetImage(noImage, 350, 230)" alt='@productName' class="img-responsive" /> 
+                              <img src="@GetImage(noImage, 350, 230)" alt='@productName' class="img-responsive" />  
+                          }
+                          @if (ValoareDiscount != "")
+                          {
+                              if (dataExpirarePromotie > CurrentDate  || dataExpirarePromotie == CurrentDate)
+                              {
+                                  <div class="stickers-container stickers-container--top-left ">
+                                      <div class="sticker sticker--new">
+                                          <div class="col-xs-12 text-center">
+                                              - @ValoareDiscount %
+                                          </div>
+                                      </div>
+                                  </div>
+                              }
+                          }
+                          @if (produsPromovat == "True")
+                          {
+                              <div class="stickers-container stickers-container--top-right">
+                                  <div class="sticker sticker--new">@Translate("Promovat")</div>
+                              </div>
                           }
                       </figure>
                   </a>
@@ -235,17 +254,35 @@ if(Dealer != "" || Producator != ""){
         <div class="row row-promotii-produs">
             <div class="col-xs-12">
                 @if(AfisarePromotie == "True"){
-                      <div class="promotie">
-                        <span class="detalii-produs" ><text><strong>@Translate("Promotie", "Promotie")</strong></text></span>
-                      </div>
+                    if (dataExpirarePromotie > CurrentDate || dataExpirarePromotie == CurrentDate)
+                    {
+                        <div class="promotie">
+                            <span class="final-oferta">
+                                <text>
+                                    <strong>@Translate("Final Oferta", "Final Ofertă:")</strong>
+                                </text>
+                                <br/>
+                                <text>
+                                    @dataExpirarePromotie.ToString("dd MMM yyyy")
+                                </text>
+                            </span>
+                        </div>
+                    }
                 }
-            
-                @if(priceProductDB > 0 ){
-                    <div class="pret-produs pull-right">
-                        <a href="@productLink">
-                        <span class="detalii-produs" ><text>@priceProductDB LEI</text></span>
-                        </a>
-                    </div>
+                @if (pretInteger > 0)
+                {
+                    if (dataExpirarePromotie > CurrentDate  || dataExpirarePromotie == CurrentDate)
+                    {
+                        <div class="pret-produs pull-right">
+                            <a href="@productLink">
+                                <span class="pretTaiat">
+                                    <span class="pretIntreg">@PretIntreg @moneda <br/></span>
+                                </span>
+                                <span class="detalii-produs pretRedus">@pretCuDiscount @moneda
+                                </span>
+                            </a>
+                        </div>
+                    }
                 }
             </div>
         </div>
