--- a/Templates/Designs/TTonlineNew/css/10_custom/00_style.css
+++ b/Templates/Designs/TTonlineNew/css/10_custom/00_style.css
@@ -6938,3 +6938,6 @@ span.seeMore , span.seeMoreFurnizori, span.seeMoreSubcategorie{
     width:100%!important;
     height: 100%!important;
 }
+#raspunsFormularNewsletter{
+    color:white;
+}
