--- a/Templates/Designs/TTonlineNew/Paragraph/New_ArticleSlider.cshtml
+++ b/Templates/Designs/TTonlineNew/Paragraph/New_ArticleSlider.cshtml
@@ -12,7 +12,7 @@
 @{
 	int count = 1;
 	int iteration = 0;
-    var pageId = GetPageIdByNavigationTag("ArticlesFeed");
+    var pageId = GetPageIdByNavigationTag("ArticlesFeedNoSorting");
     var articlesSlides = "";
     foreach (LoopItem i in GetLoop("Item.Slides"))
     {
@@ -27,7 +27,7 @@
 <div class="row">
   <div class="col-md-12">
     <div class="flexslider">
-      <div class="featured-slider" id="HomePageSlider" data-template="HomepageSliderTemplate" data-json-feed="/Default.aspx?ID=@pageId&PageID=@articlesSlides">
+      <div class="featured-slider" id="HomePageSlider" data-template="HomepageSliderTemplate" data-json-feed="/Default.aspx?ID=@pageId&PageID=@articlesSlides&pagesize=9">
         <div class="row">
           <div class="col-md-9">
             <div class="pre-render-element pre-render-element--xl"></div>
@@ -57,11 +57,11 @@
           
           <div class="featured-href">
             <figure class="image-overlay2">
-              <img src='/Admin/Public/GetImage.ashx?Image={{itemImaginePrincipala}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=0&Format=jpg&Width=760&Height=510' alt="{{itemTitlu}}"/>
+              <img src='/Admin/Public/GetImage.ashx?Image={{itemImaginePrincipala}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=5&Format=jpg&Width=760&Height=510' alt="{{itemTitlu}}"/>
             </figure>
            
           <div class="featured-header">
-            <a  href="{{mainURL}}">
+            <a  href="/Default.aspx?ID={{pagePageID}}" target="_blank">
              <h2 class="white-font">{{itemTitlu}}</h2>
               <p class="simple-share">
                 @Translate("articolde","de")
@@ -85,11 +85,11 @@
         </div> 
           <div  class="featured-href">
             <figure class="image-overlay2">
-              <img src='/Admin/Public/GetImage.ashx?Image={{itemImaginePrincipala}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=0&Format=jpg&Width=365&Height=250' alt="{{itemTitlu}}"/>
+              <img src='/Admin/Public/GetImage.ashx?Image={{itemImaginePrincipala}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=5&Format=jpg&Width=365&Height=250' alt="{{itemTitlu}}"/>
             </figure>
           
             <div class="featured-header">
-              <a href="{{mainURL}}">
+              <a href="/Default.aspx?ID={{pagePageID}}" target="_blank">
               {{#articleSections}}
                 <span class="category bgcolor5">{{Name}}</span>
               {{/articleSections}}
@@ -115,11 +115,11 @@
           </div> 
              <div class="featured-href">
                <figure class="image-overlay2">
-              <img src='/Admin/Public/GetImage.ashx?Image={{itemImaginePrincipala}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=0&Format=jpg&Width=365&Height=250' alt="{{itemTitlu}}"/>
+              <img src='/Admin/Public/GetImage.ashx?Image={{itemImaginePrincipala}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=5&Format=jpg&Width=365&Height=250' alt="{{itemTitlu}}"/>
                </figure>
            
                <div class="featured-header">
-                 <a href="/Default.aspx?ID={{pagePageID}}" >
+                 <a href="/Default.aspx?ID={{pagePageID}}" target="_blank">
                  {{#articleSections}}
                   <span class="category bgcolor4">{{Name}}</span>
                  {{/articleSections}}
