Diverse modificari cerute la support

--- a/Templates/Designs/TTonline/Custom/Sidebar/Widget-Abonare.cshtml
+++ b/Templates/Designs/TTonline/Custom/Sidebar/Widget-Abonare.cshtml
@@ -1,3 +1,7 @@
-﻿@if(@GetPageIdByNavigationTag("Revista") != @GetInteger("DwPageID")) {
-    @RenderParagraphContent(164)
-}
+﻿ @if (GetInteger("DwAreaID") == 1)
+ {
+    if (@GetPageIdByNavigationTag("Revista") != @GetInteger("DwPageID"))
+ {
+     @RenderParagraphContent(164)
+ }
+ }
