--- a/Templates/Designs/TTonlineNew/Custom/Sidebar/New_Widget-Evenimente.cshtml
+++ b/Templates/Designs/TTonlineNew/Custom/Sidebar/New_Widget-Evenimente.cshtml
@@ -27,14 +27,14 @@
 {{#each EvenimenteContainer}}
    <div class="item">
         <figure class="image-overlay">
-			<img src="/Admin/Public/GetImage.ashx?Image={{Afis}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=0&Format=jpg&Width=350&Height=230" class="img-responsive">
+			<img src="/Admin/Public/GetImage.ashx?Image={{Afis}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=5&Format=jpg&Width=350&Height=230" class="img-responsive">
         </figure>
         <span>{{title}}</span>                
         <div class="description">{{{Descriere}}}</div>
         @if(GetInteger("DwAreaID") == 1){
-              <a href="{{URLEveniment}}" style="z-index: 200;">Mai mult</a>
+              <a href="{{link}}" style="z-index: 200;" target="_blank">Mai mult</a>
           }else{
-              <a href="{{URLEveniment}}" style="z-index: 200;">Read More</a>
+              <a href="{{link}}" style="z-index: 200;" target="_blank">Read More</a>
           }
 	</div>
 {{/each}}	
