--- a/Templates/Designs/TTonlineNew/New_SectionLandingPage.cshtml
+++ b/Templates/Designs/TTonlineNew/New_SectionLandingPage.cshtml
@@ -138,7 +138,7 @@ string filterValue8= "Item.Tip='Articole'";
     @*ARTICOLE SI STIRI*@	
  
     <div class="col-xs-12">
-        <div class="row handlebars-wrapper display-title-up" id="LoopArticoleStiri" data-template="LoopArticoleStiriTemplate" data-json-feed="/Default.aspx?ID=@articlesPageId&pagesize=8&Sections=@sectionID&Excluded=@excludedArticles">
+        <div class="row handlebars-wrapper display-title-up" id="LoopArticoleStiri" data-template="LoopArticoleStiriTemplate" data-json-feed="/Default.aspx?ID=@articlesPageId&pagesize=8&Sections=@sectionID&Excluded=@excludedArticles&type=Articole">
             @*Handlebars goes here*@ 
             <div class="col-md-6 col-xs-12" style="padding-left: 0px">
                 @RenderPlaceholderImageTop("pre-render-element--md")
