--- a/Templates/Designs/TTonlineNew/Custom/Sidebar/New_Widget-TabPanel.cshtml
+++ b/Templates/Designs/TTonlineNew/Custom/Sidebar/New_Widget-TabPanel.cshtml
@@ -1,22 +1,26 @@
 @{
     var feedCititePageID = GetPageIdByNavigationTag("ArticlesCititeFeed");
+    DateTime currentDate = DateTime.Now;
+    DateTime ago = currentDate.AddMonths(-4);
+    var agoString = ago.ToString("yyyy.MM.dd");
+    var currentDateString = currentDate.ToString("yyyy.MM.dd");
 }
 
 <div class="widget tabwidget">
     <ul class="nav nav-tabs" role="tablist" id="widget-tab">
-        <li role="presentation" class="active"><a href="#tab-popular" aria-controls="tab-popular" role="tab" data-toggle="tab">@Translate("popular","Cele mai citite")</a></li>
-        <li role="presentation"><a href="#tab-recent" aria-controls="tab-recent" role="tab" data-toggle="tab">@Translate("recent","Cele mai noi")</a></li>
+        <li role="presentation" class="active"><a href="#tab-recent" aria-controls="tab-recent" role="tab" data-toggle="tab">@Translate("recent","Cele mai noi")</a></li>
+        <li role="presentation"><a href="#tab-popular" aria-controls="tab-popular" role="tab" data-toggle="tab">@Translate("popular","Cele mai citite")</a></li>
     </ul>
     <div class="tab-content">
-        <div role="tabpanel" class="tab-pane active sidebar-handlebars-wrapper" id="tab-popular" data-template="CeleMaiNoiTemplate"  data-json-feed="/Default.aspx?ID=@feedPageID&PageSize=5&type=Articole">
+        <div role="tabpanel" class="tab-pane active sidebar-handlebars-wrapper" id="tab-recent" data-template="CeleMaiNoiTemplate"  data-json-feed="/Default.aspx?ID=@feedPageID&PageSize=5&type=Articole">
             @*Handlebars Template goes here*@
             @RenderPlaceholderImageOnLeft()
             @RenderPlaceholderImageOnLeft()
             @RenderPlaceholderImageOnLeft()
         </div><!-- Recent Posts -->
-        <div role="tabpanel" class="tab-pane sidebar-handlebars-wrapper" id="tab-recent" data-template="CeleMaiCititeTemplate"  data-json-feed="/Default.aspx?ID=@feedCititePageID&PageSize=5&type=Articole">
-            @*Handlebars Template goes here*@
-        </div><!-- Recent Posts -->         
+        <div role="tabpanel" class="tab-pane sidebar-handlebars-wrapper" id="tab-popular" data-template="CeleMaiCititeTemplate"  data-json-feed="/Default.aspx?ID=@feedCititePageID&PageSize=5&type=Articole&ArticleDate=@(agoString)&EndDate=@currentDateString">
+            $1$Handlebars Template goes here#1#
+        </div><!-- Recent Posts -->        
     </div>
 </div>
 
@@ -25,7 +29,7 @@
    {{#each Article}}
    <article class='widget-post clearfix'>
        <div class="simple-thumb">  
-       <img src='/Admin/Public/GetImage.ashx?Image={{itemImaginePrincipala}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=0&Format=jpg&Width=95&Height=90' alt="{{itemTitlu}}" />
+       <img src='/Admin/Public/GetImage.ashx?Image={{itemImaginePrincipala}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=5&Format=jpg&Width=95&Height=90' alt="{{itemTitlu}}" />
        </div>
        <header>
            <h3>
@@ -42,7 +46,7 @@
    {{#each Article}}
     <article class="widget-post clearfix">
         <div class="simple-thumb">  
-            <img src='/Admin/Public/GetImage.ashx?Image={{itemImaginePrincipala}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=0&Format=jpg&Width=95&Height=80' alt="{{itemTitlu}}" />
+            <img src='/Admin/Public/GetImage.ashx?Image={{itemImaginePrincipala}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=5&Format=jpg&Width=95&Height=80' alt="{{itemTitlu}}" />
         </div>
         <header>
             <h3>
