--- a/Templates/Designs/TTonlineNew/Includes/PageTemplates/MasterHelpers.cshtml
+++ b/Templates/Designs/TTonlineNew/Includes/PageTemplates/MasterHelpers.cshtml
@@ -77,7 +77,8 @@ if (string.IsNullOrEmpty(System.Web.HttpContext.Current.Request.Params["ProductI
       var scriptBundleHeader = Dna.Optimizer.Renderer.RenderScripts(string.Format("{0}js/header", designFolder), minify: minify, recursive : true, virtualPathPrefix : "-main-scripts-header",exclusions:  new[] { "exceptions" });
      // var scriptBundleFooter = Dna.Optimizer.Renderer.RenderScripts(string.Format("{0}js/footer", designFolder), minify: minify, recursive : true, virtualPathPrefix : "-main-scripts-footer",exclusions:  new[] { "exceptions" });
     }
-    <link rel="stylesheet" href="@styleBundle" />
+    @*<link rel="stylesheet" href="@styleBundle" />*@
+    <link rel="stylesheet" href="/Files/Templates/Designs/TTonlineNew/css/10_custom/custom.min.css"/>
     <script src="@scriptBundleHeader"></script>
     @GetString("Javascripts")
     @RenderSnippet("externalScripts")
